Fixed row wrapping text in ProductPost.js(Naweeda)

--- a/src/components/ProductPost.css
+++ b/src/components/ProductPost.css
@@ -14,7 +14,7 @@
   .column {
     float: left;
     width: 50%;
-    padding: 12px;
+    padding: 10px;
     line-height: 200%; 
   }
   
